css of inline code in .md is updated

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,3 +25,10 @@ a {
 .blog p {
   line-height: 200%;
 }
+
+code {
+  font-family: Consolas, Monaco, "Andale Mono", monospace;
+  padding: 0 0.5rem;
+  color: #ffffff;
+  background-color: rgb(43, 43, 43);
+}
